--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 }
 
 .jumbotron {
-	background-image: url(../image/jumbotron1.jpg);
+	background-image: url(../image/jumbotron1.JPG);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -899,7 +899,7 @@ p.header-p {
 
 @media (max-width: 480px) {
 	.jumbotron {
-		background-image: url(../image/jumbotron.jpg);
+		background-image: url(../image/jumbotron.JPG);
 	}
 	.jumbotron h1 {
 		font-size: 30px;
